@@ -951,6 +951,7 @@ subroutine ca_get_sponge_params(name, namlen) bind(C, name="ca_get_sponge_params
        sponge_lower_factor, sponge_upper_factor, &
        sponge_lower_radius, sponge_upper_radius, &
        sponge_lower_density, sponge_upper_density, &
+       sponge_lower_pressure, sponge_upper_pressure, &
        sponge_target_x_velocity, &
        sponge_target_y_velocity, &
        sponge_target_z_velocity, &
@@ -966,6 +967,9 @@ subroutine ca_get_sponge_params(name, namlen) bind(C, name="ca_get_sponge_params
 
   sponge_lower_density = -1.e0_rt
   sponge_upper_density = -1.e0_rt
+
+  sponge_lower_pressure = -1.e0_rt
+  sponge_upper_pressure = -1.e0_rt
 
   sponge_target_x_velocity = 0.e0_rt
   sponge_target_y_velocity = 0.e0_rt
